--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -249,7 +249,7 @@ file_error = arancino.error.log
 #file_stats = arancino.stats.log
 
 # print stack trace on errors
-print_stack_trace = True
+print_stack_trace = False
 
 #------------------------------------------------------------------------------------------
 
