--- a/config/transmitter.flow.stats.cfg
+++ b/config/transmitter.flow.stats.cfg
@@ -1,11 +1,11 @@
 [flow]
-name = SmartmeFlow
+name = StatsFlow
 enabled = True
 
 [parser]
 class = ParserS4T
 section = ["simple", "s4t", "parser"]
-file = S4T_default.json.tmpl
+file = STATS_default.json.tmpl
 
 [simple]
 # Configuration for ParserSimple
