--- a/setup.cfg
+++ b/setup.cfg
@@ -74,7 +74,7 @@ extras =
     extras/arancino.service
     extras/vars.env
 config =
-    config/arancino.cfg
+    config/arancino.cfg.yml
     config/gunicorn.cfg.py
 templates =
     templates/default.json.tmpl
