--- a/config/arancino.dev.cfg.yml
+++ b/config/arancino.dev.cfg.yml
@@ -124,7 +124,22 @@ port:
   reset_reconnection_delay: 40
 
 
+  # Command spawned when Upload function is called. The command
+  #   could have one or more placeholders. Placeholders are all the
+  #   attributes of the Port Class.
+  upload_command: null
+
+  port_type_list:
+    - serial
+    - test
+
   serial:
+
+    mcu_type_list:
+      - samd21
+      - nrf52
+      - stm32
+      - rp20
 
     # Automatically enables (and connect) a new discovered Port.
     auto_enable: true
@@ -166,18 +181,6 @@ port:
       - "0x2E8A:0x000A"
       - "0x0483 0x5740"
 
-    family:
-      samd21:
-        - "0x04D8:0xECDA"
-        - "0x04D8:0xECD9"
-      nrf52:
-        - "0x1915:0x521F"
-      rp20:
-        - "0x2E8A:0x000A"
-      stm32:
-        - "0x0483:0x5740"
-
-
 
     # Timeout in seconds in serial connection Min: 1
     timeout: 1
@@ -199,6 +202,9 @@ port:
 
     # Specific configurations for the SAMD21 microcontoller.
     samd21:
+      list: #list of possible vid:pid
+        - "0x04D8:0xECDA"
+        - "0x04D8:0xECD9"
       upload_command: "/usr/bin/run-arancino-bossac {port._device} {firmware}"
       reset_on_connect: true
       reset_reconnection_delay: 5
@@ -207,6 +213,8 @@ port:
 
     # Specific configurations for the NRF52 microcontoller.
     nrf52:
+      list: #list of possible vid:pid
+        - "0x1915:0x521F"
       upload_command: "/usr/bin/adafruit-nrfutil dfu serial -pkg {firmware} -p {port._device} -b 115200 --singlebank"
       reset_on_connect: true
       reset_reconnection_delay: 40
@@ -215,6 +223,8 @@ port:
 
     # Specific configurations for the STM32 microcontoller.
     stm32:
+      list: #list of possible vid:pid
+        - "0x0483:0x5740"
       upload_command: "/usr/bin/run-arancino-arduinoSTM32load {port._device} {firmware}"
       reset_on_connect: true
       reset_reconnection_delay: 5
@@ -223,6 +233,8 @@ port:
 
     # Specific configurations for the RP20 microcontoller.
     rp20:
+      list: #list of possible vid:pid
+        - "0x2E8A:0x000A"
       upload_command: "/usr/bin/run-arancino-uf2conv {port._device} {firmware}"
       reset_on_connect: true
       reset_reconnection_delay: 5
@@ -253,6 +265,7 @@ port:
 
     # Delay between each command in seconds (accepts float)
     delay: 5
+
 
     # prefix of the id generated for the test port
     id_template: TESTPORT
