Added comments to deprecated functions

--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -26,7 +26,7 @@ decode_response = True
 # - PERSISTENT: all databases are persistent (only in production with two redis instances)
 # - VOLATILE_PERSISTENT: data store, reserved key store and time series store are volatile;
 #       device store and persistent data store are persistent (only in production with two redis instances).
-instance_type = VOLATILE_PERSISTENT
+instance_type = VOLATILE
 
 # redis connection attempts: -1 -> no limits, default 5 (every 3 seconds)
 connection_attempts = 5
@@ -211,7 +211,7 @@ filter_type = ALL
 filter_list = []
 
 # the number of port to create for test purpose
-num = 1
+num = 0
 
 # delay between each command in seconds (accept float). Default 500ms
 
