--- a/setup.cfg
+++ b/setup.cfg
@@ -61,6 +61,7 @@ install_requires =
     Jinja2==3.0.3
     paho-mqtt>=1.5.1
     pyyaml>=6.0
+    ruamel.yaml>=0.17.21
 python_requires = >= 3.5
 
 [options.packages.find]
