fixes about mqtt ports

--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -205,7 +205,7 @@ filter_type = ALL
 filter_list = []
 
 # the number of port to create for test purpose
-num = 0
+num = 1
 
 # delay between each command in seconds (accept float). Default 500ms
 delay = 5
@@ -247,13 +247,14 @@ filter_type = ALL
 filter_list = []
 
 # Mqtt-Bus Broker Connection Parameters
-host = server.smartme.io
+host = localhost
 port = 1883
 username = arancino-daemon
-password = d43mon
-discovery_topic = arancino/discovery
-cortex_topic = arancino/cortex
-service_topic = arancino/service
+password = 12345678
+client_id = 87654321
+discovery_topic = arancino/discovery/87654321
+cortex_topic = arancino/cortex/87654321
+service_topic = arancino/service/87654321
 
 
 # time (in seconds) between each heartbeat check
