fix missing setup configurations

--- a/setup.cfg
+++ b/setup.cfg
@@ -77,11 +77,14 @@ extras =
 config =
     config/arancino.cfg.yml
     config/gunicorn.cfg.py
+    config/transmitter.flow.smartme.cfg.yml
+    config/transmitter.flow.stats.cfg.yml
 templates =
     templates/default.json.tmpl
     templates/default.xml.tmpl
     templates/default.yaml.tmpl
     templates/S4T_default.json.tmpl
+    templates/STATS_default.json.tmpl
 
 [options.entry_points]
 console_scripts =
