--- a/config/arancino.dev.cfg.yml
+++ b/config/arancino.dev.cfg.yml
@@ -7,11 +7,11 @@ general:
 redis:
 
   # Redis Server host of volatile instance
-  host_volatile: localhost
+  host_volatile: "localhost"
 
 
   # Redis Server host of persistent instance
-  host_persistent: localhost
+  host_persistent: "localhost"
 
 
   # Redis Server port of volatile instance
@@ -19,7 +19,7 @@ redis:
 
 
   # Redis Server port of persistent instance
-  port_persistent: 6379
+  port_persistent: 6380
 
 
   # Decode the response in Redis client response.
@@ -64,12 +64,8 @@ redis:
     datastore_tse_db: 4
     datastore_tag_db: 5
 
-    host_volatile: localhost
+    host_volatile: "localhost"
     port_volatile: 6379
-
-    host_persistent: localhost
-    port_persistent: 6379
-
 
   persistent:
     datastore_std_db: 0
@@ -78,9 +74,8 @@ redis:
     datastore_rsvd_db: 3
     datastore_tse_db: 4
     datastore_tag_db: 5
-    host_volatile: localhost
-    port_volatile: 6380
-    host_persistent: localhost
+
+    host_persistent: "localhost"
     port_persistent: 6380
 
   volatile_persistent:
@@ -89,7 +84,7 @@ redis:
     datastore_rsvd_db: 1
     datastore_tse_db: 2
 
-    host_volatile: localhost
+    host_volatile: "localhost"
     port_volatile: 6379
 
     #persistent
@@ -97,7 +92,7 @@ redis:
     datastore_per_db: 1
     datastore_tag_db: 2
 
-    host_persistent: localhost
+    host_persistent: "localhost"
     port_persistent: 6380
 
 
@@ -108,7 +103,7 @@ port:
 
 
   # Allowed firmware file extensions
-  firmware_file_types: [bin, hex, uf2, zip]
+  firmware_file_types: ["bin", "hex", "uf2", "zip"]
 
 
   # Reset the port on connection.
@@ -131,16 +126,16 @@ port:
 
 
   port_type_list:
-  - serial
-  - test
+    - serial
+    - test
 
   serial:
 
     mcu_type_list:
-    - samd21
-    - nrf52
-    - stm32
-    - rp20
+      - samd21
+      - nrf52
+      - stm32
+      - rp20
 
 
     # Automatically enables (and connect) a new discovered Port.
@@ -178,11 +173,27 @@ port:
     #   - 0x2E8A:0x000A - A4000 (aka Arancino Pico) (RP2040)
     #   - 0x0483:0x5740 - A6000-A7000-A8000 (aka Arancino V*) (STM32)
     filter_list:
-    - 0x04D8:0xECD9
-    - 0x04D8:0xECDA
-    - 0x1915:0x521F
-    - 0x2E8A:0x000A
-    - 0x0483 0x5740
+      - "0x04D8:0xECD9"
+      - "0x04D8:0xECDA"
+      - "0x1915:0x521F"
+      - "0x2E8A:0x000A"
+      - "0x0483 0x5740"
+
+
+    family:
+
+      samd21:
+        - "0x04D8:0xECDA"
+        - "0x04D8:0xECD9"
+
+      nrf52:
+        - "0x1915:0x521F"
+
+      rp20:
+        - "0x2E8A:0x000A"
+
+      stm32:
+        - "0x0483:0x5740"
 
 
     # Timeout in seconds in serial connection Min: 1
@@ -192,7 +203,7 @@ port:
     # Command spawned when Upload function is called. The command
     #   could have one or more placeholders. Placeholders are all the
     #   attributes of the Port Class.
-    upload_command: /usr/bin/run-arancino-bossac {port._device} {firmware}
+    upload_command: "/usr/bin/run-arancino-bossac {port._device} {firmware}"
 
 
     # Reset the port on connection, override the default configuration (can be overrided by the mcu family)
@@ -206,9 +217,9 @@ port:
     # Specific configurations for the SAMD21 microcontoller.
     samd21:
       list: #list of possible vid:pid
-      - 0x04D8:0xECDA
-      - 0x04D8:0xECD9
-      upload_command: /usr/bin/run-arancino-bossac {port._device} {firmware}
+        - "0x04D8:0xECDA"
+        - "0x04D8:0xECD9"
+      upload_command: "/usr/bin/run-arancino-bossac {port._device} {firmware}"
       reset_on_connect: true
       reset_reconnection_delay: 5
       comm_baudrate: 115200
@@ -217,9 +228,8 @@ port:
     # Specific configurations for the NRF52 microcontoller.
     nrf52:
       list: #list of possible vid:pid
-      - 0x1915:0x521F
-      upload_command: /usr/bin/adafruit-nrfutil dfu serial -pkg {firmware} -p {port._device}
-        -b 115200 --singlebank
+        - "0x1915:0x521F"
+      upload_command: "/usr/bin/adafruit-nrfutil dfu serial -pkg {firmware} -p {port._device} -b 115200 --singlebank"
       reset_on_connect: true
       reset_reconnection_delay: 40
       comm_baudrate: 256000
@@ -228,8 +238,8 @@ port:
     # Specific configurations for the STM32 microcontoller.
     stm32:
       list: #list of possible vid:pid
-      - 0x0483:0x5740
-      upload_command: /usr/bin/run-arancino-arduinoSTM32load {port._device} {firmware}
+        - "0x0483:0x5740"
+      upload_command: "/usr/bin/run-arancino-arduinoSTM32load {port._device} {firmware}"
       reset_on_connect: true
       reset_reconnection_delay: 5
       comm_baudrate: 256000
@@ -238,17 +248,17 @@ port:
     # Specific configurations for the RP20 microcontoller.
     rp20:
       list: #list of possible vid:pid
-      - 0x2E8A:0x000A
-      upload_command: /usr/bin/run-arancino-uf2conv {port._device} {firmware}
+        - "0x2E8A:0x000A"
+      upload_command: "/usr/bin/run-arancino-uf2conv {port._device} {firmware}"
       reset_on_connect: true
       reset_reconnection_delay: 5
       comm_baudrate: 256000
 
   test:
 
-    auto_enable: true
+    auto_enable: True
 
-    hide: true
+    hide: True
 
 
     filter_type: ALL
@@ -352,7 +362,7 @@ transmitter_old:
 
   parser:
 
-    class: ParserSimple
+    class: "ParserSimple"
 
     # template file used to parse data with the template engine (jinja2)
     #   default available templates:
@@ -360,7 +370,7 @@ transmitter_old:
     #   - default.json.tmpl
     #   - default.xml.tmpl
 
-    file: default.json.tmpl
+    file: "default.json.tmpl"
 
     #PARSER SIMPLE#
     simple:
@@ -370,18 +380,18 @@ transmitter_old:
     s4t:
       # Configuration for ParserS4T
 
-      db_name: db_name
+      db_name: "db_name"
 
   sender:
     # Available Senders are: SenderDoNothing, SenderTcpSocket, SenderMqtt, SenderMqttS4T
-    class: SenderDoNothing
+    class: "SenderDoNothing"
 
     #SENDER DO NOTHING
     donothing:
 
     #SENDER TCP SOCKET
     tcpsocket:
-      host: tcp_server_ip
+      host: "tcp_server_ip"
       port: 0000
 
     #SENDER MQTT
@@ -399,13 +409,13 @@ transmitter_old:
       #   - labels.device_id -> the identifier of the device where the ports are connected to. (Note: not always available)
       #   - labels.?????
 
-      topic: your_topic
+      topic: "your_topic"
 
       # plain
-      host: mqtt_broker_ip
+      host: "mqtt_broker_ip"
       port: 1883
-      username: your_username
-      password: your_password
+      username: "your_username"
+      password: "your_password"
 
       # secure
       ca_path:
