--- a/config/arancino.dev.cfg.yml
+++ b/config/arancino.dev.cfg.yml
@@ -19,7 +19,7 @@ redis:
 
 
   # Redis Server port of persistent instance
-  port_persistent: 6379
+  port_persistent: 6380
 
 
   # Decode the response in Redis client response.
@@ -64,10 +64,10 @@ redis:
     datastore_tse_db: 4
     datastore_tag_db: 5
 
-    host_volatile: localhost
+    host_volatile: "localhost"
     port_volatile: 6379
 
-    host_persistent: localhost
+    host_persistent: "localhost"
     port_persistent: 6379
 
 
@@ -78,9 +78,9 @@ redis:
     datastore_rsvd_db: 3
     datastore_tse_db: 4
     datastore_tag_db: 5
-    host_volatile: localhost
+    host_volatile: "localhost"
     port_volatile: 6380
-    host_persistent: localhost
+    host_persistent: "localhost"
     port_persistent: 6380
 
   volatile_persistent:
@@ -89,7 +89,7 @@ redis:
     datastore_rsvd_db: 1
     datastore_tse_db: 2
 
-    host_volatile: localhost
+    host_volatile: "localhost"
     port_volatile: 6379
 
     #persistent
@@ -97,18 +97,18 @@ redis:
     datastore_per_db: 1
     datastore_tag_db: 2
 
-    host_persistent: localhost
+    host_persistent: "localhost"
     port_persistent: 6380
 
 
 port:
 
   # Folder for firmware to be flashed onto microcontroller.
-  firmware_path: /tmp/arancino/firmware
+  firmware_path: "/tmp/arancino/firmware"
 
 
   # Allowed firmware file extensions
-  firmware_file_types: [bin, hex, uf2, zip]
+  firmware_file_types: ["bin", "hex", "uf2", "zip"]
 
 
   # Reset the port on connection.
@@ -117,6 +117,7 @@ port:
   #   due to the restart. so Arancino Daemon requires a reset of the
   #   microcontroller
   reset_on_connect: true
+
 
   # Reconnection delay after a reset (in seconds)
   #   When call the Reset function of a Port, the Daemon waits to
@@ -127,12 +128,13 @@ port:
   # Command spawned when Upload function is called. The command
   #   could have one or more placeholders. Placeholders are all the
   #   attributes of the Port Class.
-  upload_command:
+  upload_command: null
 
 
   port_type_list:
   - serial
   - test
+
 
   serial:
 
@@ -206,9 +208,9 @@ port:
     # Specific configurations for the SAMD21 microcontoller.
     samd21:
       list: #list of possible vid:pid
-      - 0x04D8:0xECDA
-      - 0x04D8:0xECD9
-      upload_command: /usr/bin/run-arancino-bossac {port._device} {firmware}
+      - "0x04D8:0xECDA"
+      - "0x04D8:0xECD9"
+      upload_command: "/usr/bin/run-arancino-bossac {port._device} {firmware}"
       reset_on_connect: true
       reset_reconnection_delay: 5
       comm_baudrate: 115200
@@ -217,9 +219,8 @@ port:
     # Specific configurations for the NRF52 microcontoller.
     nrf52:
       list: #list of possible vid:pid
-      - 0x1915:0x521F
-      upload_command: /usr/bin/adafruit-nrfutil dfu serial -pkg {firmware} -p {port._device}
-        -b 115200 --singlebank
+      - "0x1915:0x521F"
+      upload_command: "/usr/bin/adafruit-nrfutil dfu serial -pkg {firmware} -p {port._device} -b 115200 --singlebank"
       reset_on_connect: true
       reset_reconnection_delay: 40
       comm_baudrate: 256000
@@ -228,7 +229,7 @@ port:
     # Specific configurations for the STM32 microcontoller.
     stm32:
       list: #list of possible vid:pid
-      - 0x0483:0x5740
+      - "0x0483:0x5740"
       upload_command: /usr/bin/run-arancino-arduinoSTM32load {port._device} {firmware}
       reset_on_connect: true
       reset_reconnection_delay: 5
@@ -238,11 +239,12 @@ port:
     # Specific configurations for the RP20 microcontoller.
     rp20:
       list: #list of possible vid:pid
-      - 0x2E8A:0x000A
-      upload_command: /usr/bin/run-arancino-uf2conv {port._device} {firmware}
+      - "0x2E8A:0x000A"
+      upload_command: "/usr/bin/run-arancino-uf2conv {port._device} {firmware}"
       reset_on_connect: true
       reset_reconnection_delay: 5
       comm_baudrate: 256000
+
 
   test:
 
@@ -250,21 +252,17 @@ port:
 
     hide: true
 
-
     filter_type: ALL
 
-
-    filter_list:
-
+    filter_list: null
 
     reset_on_connect: false
 
-
-    upload_command:
+    upload_command: null
 
 
     # The number of Oort to create for test purpose
-    num: 1
+    num: 0
 
 
     # Delay between each command in seconds (accepts float)
@@ -335,82 +333,3 @@ transmitter:
     # Represents the time (in seconds) in which the reader collects data
     # and transfers it to the upper level
     cycle_time: 10
-
-
-
-transmitter_old:
-
-  # Enable or disable the transmitter module of Arancino
-  enabled: false
-
-
-  reader:
-
-    # Represents the time (in seconds) in which the reader collects data
-    # and transfers it to the upper level
-    cycle_time: 10
-
-  parser:
-
-    class: ParserSimple
-
-    # template file used to parse data with the template engine (jinja2)
-    #   default available templates:
-    #   - default.yaml.tmpl
-    #   - default.json.tmpl
-    #   - default.xml.tmpl
-
-    file: default.json.tmpl
-
-    #PARSER SIMPLE#
-    simple:
-      # Configuration for ParserSimple
-
-    #PARSER S4T#
-    s4t:
-      # Configuration for ParserS4T
-
-      db_name: db_name
-
-  sender:
-    # Available Senders are: SenderDoNothing, SenderTcpSocket, SenderMqtt, SenderMqttS4T
-    class: SenderDoNothing
-
-    #SENDER DO NOTHING
-    donothing:
-
-    #SENDER TCP SOCKET
-    tcpsocket:
-      host: tcp_server_ip
-      port: 0000
-
-    #SENDER MQTT
-    mqtt:
-      use_tls: false
-      qos: 1
-      retain: false
-
-      # NOTE: non available at the moment.
-      # channel parameter can contains placeholder with the using of "{" and "}"
-      # placeholder can be:
-      #   - key -> the name of the key that contains the measurements
-      #   - labels.port_id -> the identifier of the port that provides the measurements
-      #   - labels.port_type -> the type of the port that provides the measurements
-      #   - labels.device_id -> the identifier of the device where the ports are connected to. (Note: not always available)
-      #   - labels.?????
-
-      topic: your_topic
-
-      # plain
-      host: mqtt_broker_ip
-      port: 1883
-      username: your_username
-      password: your_password
-
-      # secure
-      ca_path:
-      cert_path:
-      key_path:
-
-    #SENDER MQTT S4T
-    mqtts4t:
