Updated ble support

--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -232,7 +232,7 @@ heartbeat_attempts = 5
 
 [port.mqtt]
 
-discovery = True
+discovery = False
 
 # automatically enable (and connect) a new discovered port
 enabled = True
@@ -270,7 +270,7 @@ heartbeat_attempts = 5
 
 [port.uart_ble]
 
-discovery = False
+discovery = True
 
 filter_type = ALL
 
@@ -278,6 +278,9 @@ filter_list = []
 
 # Timeout in seconds in connection. Min: 1
 timeout = 10
+
+# size for Tx and Rx UartBle buffers
+buffer_size = 1024
 
 # command to be spawn when upload api is called. The command could have one or more placeholders.
 upload_command = nrfutil ...
@@ -293,6 +296,12 @@ heartbeat_time = 0.25
 
 # number of heartbeat checks, when no heartbeat is detected, before send alert.
 heartbeat_attempts = 5
+
+# name for tx characteristic of device
+vendor_tx_uuid = 6E400003-B5A3-F393-E0A9-E50E24DCCA9E
+
+# name for rx characteristic of device
+vendor_rx_uuid = 6E400002-B5A3-F393-E0A9-E50E24DCCA9E
 
 #------------------------------------------------------------------------------------------
 [log]
