--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -98,7 +98,7 @@ reset_on_connect = False
 #------------------------------------------------------------------------------------------
 [port.serial]
 # default 'arancino port' configuration status
-discovery = False
+discovery = True
 
 # automatically enable (and connect) a new discovered port
 enabled = False
@@ -292,7 +292,7 @@ reset_on_connect = False
 heartbeat_rate = 5
 
 # time threshold (in seconds) between to heartbeat #1 and #2 used to evaluate the healty of the system
-heartbeat_time = 0.25
+heartbeat_time = 10
 
 # number of heartbeat checks, when no heartbeat is detected, before send alert.
 heartbeat_attempts = 5
