Updated ble support

--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -291,8 +291,8 @@ reset_on_connect = False
 # time (in seconds) between each heartbeat check
 heartbeat_rate = 5
 
-# time threshold (in seconds) between to heartbeat #1 and #2 used to evaluate the healty of the system
-heartbeat_time = 10
+# time threshold (in milliseconds) between to heartbeat #1 and #2 used to evaluate the healty of the system
+heartbeat_time = 200
 
 # number of heartbeat checks, when no heartbeat is detected, before send alert.
 heartbeat_attempts = 5
