--- a/config/arancino.dev.cfg.yml
+++ b/config/arancino.dev.cfg.yml
@@ -2,7 +2,11 @@ general:
 
   # Polling cycle time (in seconds) to discover new ports.
   cycle_time: 10
+
+  #number of commands (store, mstore) to add in the pipeline before executing them min: 1 max: 1000
   pipeline_length: 1000
+
+  #flag to use the pipeline or not
   use_pipeline: true
 
 
@@ -57,7 +61,7 @@ redis:
   #      Note: Time Series data are usually stored in the volatile instance. If the device
   #          power off, you lose your data in any case.
   #retetion: 3600000
-  retetion: 10000
+  retetion: 3600000
 
   volatile:
     datastore_std_db: 0
