Added BLE reset handling

--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -286,7 +286,7 @@ buffer_size = 1024
 upload_command = nrfutil ...
 
 # reset port on connection, this override the default configuration
-reset_on_connect = False
+reset_on_connect = True
 
 # time (in seconds) between each heartbeat check
 heartbeat_rate = 5
@@ -302,6 +302,15 @@ vendor_tx_uuid = 6E400003-B5A3-F393-E0A9-E50E24DCCA9E
 
 # name for rx characteristic of device
 vendor_rx_uuid = 6E400002-B5A3-F393-E0A9-E50E24DCCA9E
+
+# name for service tx characteristic of device
+vendor_service_uuid = 01010101-0101-0101-0101-010101010101
+
+# name for service tx characteristic of device
+vendor_service_tx_uuid = 01010003-B5A3-F393-E0A9-E50E24DCCA9E
+
+# name for service rx characteristic of device
+vendor_service_rx_uuid = 01010002-B5A3-F393-E0A9-E50E24DCCA9E
 
 #------------------------------------------------------------------------------------------
 [log]
